--- a/theme.css
+++ b/theme.css
@@ -36,9 +36,9 @@ body {
 
   --h1-color: var(--text-normal);
   --h2-color: var(--text-normal);
-  --h3-color: var(--blue);
-  --h4-color: var(--yellow);
-  --h5-color: var(--red);
+  --h3-color: var(--text-normal);
+  --h4-color: var(--text-normal);
+  --h5-color: var(--text-muted);
   --h6-color: var(--text-muted);
 
   --strong-color: var(--pink);
@@ -1490,7 +1490,7 @@ settings:
         title: H3 color
         type: variable-color
         format: hex
-        default: '#2E80F2'
+        default: '#'
     - 
         id: level-4-headings
         title: Level 4 Headings
@@ -1514,7 +1514,7 @@ settings:
         title: H4 color
         type: variable-color
         format: hex
-        default: '#E5B567'
+        default: '#'
     -
         id: h4-transform
         title: H4 transform
@@ -1551,7 +1551,7 @@ settings:
         title: H5 color
         type: variable-color
         format: hex
-        default: '#E83E3E'
+        default: '#'
     - 
         id: level-6-headings
         title: Level 6 Headings
