Style Settings Name Update

--- a/theme.css
+++ b/theme.css
@@ -1225,7 +1225,7 @@ body .kanban-plugin__item-form .kanban-plugin__item-input-wrapper {
 /* ─────────────────────────────────────────────────── */
 
 /* @settings
-name: Things Theme
+name: Things Fork Theme
 id: things-style
 settings:
     -
