Update Settings ID

--- a/theme.css
+++ b/theme.css
@@ -1226,7 +1226,7 @@ body .kanban-plugin__item-form .kanban-plugin__item-input-wrapper {
 
 /* @settings
 name: Things Fork Theme
-id: things-style
+id: things-fork-style
 settings:
     -
         id: features
